[package]
name = "ultra_16_sprite_compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.1"
kmeans = "0.2.1"
palette = "0.7.5"
clap = "4.5.4"
# rayon = "1.5.1"
# serde = { version = "1.0.130", features = ["derive"] }
toml = "0.8.12"
# thiserror = "1.0.30"
